--- a/tetorisu.html
+++ b/tetorisu.html
@@ -89,11 +89,8 @@ map=[
 [1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1]];
 
 			//ブロックを三次配列で保存
-var block=[	[[0,1,0,0,0,0],[0,0,1,1,0,0],[0,1,0,0,0,0],[0,0,1,1,0,0],[0,1,0,0,0,0],[0,0,1,1,0,0]],
-		[[0,0,0,0,0,0],[0,0,0,1,0,0],[0,0,0,1,0,0],[0,0,0,1,0,0],[0,0,1,0,0,0],[0,1,0,0,0,0]],
-		[[0,0,0,0,0,0],[0,1,0,1,0,0],[0,1,0,1,0,0],[0,0,0,1,0,0],[0,0,0,1,0,0],[0,0,1,0,0,0]],
-		[[0,0,0,0,0,0],[1,1,1,1,1,0],[0,0,0,1,0,0],[0,0,1,0,0,0],[0,1,0,1,0,0],[1,0,0,0,1,0]],//2:29 2011/03/09
-		[[0,0,0,0,0,0],[0,0,0,0,0,0],[0,0,1,1,0,0],[0,0,0,1,0,0],[0,0,0,1,0,0],[0,0,0,0,0,0]],//ここから普通のやつ
+var block=[
+		[[0,0,0,0,0,0],[0,0,0,0,0,0],[0,0,1,1,0,0],[0,0,0,1,0,0],[0,0,0,1,0,0],[0,0,0,0,0,0]],
 		[[0,0,0,0,0,0],[0,0,0,0,0,0],[0,0,1,1,0,0],[0,0,1,0,0,0],[0,0,1,0,0,0],[0,0,0,0,0,0]],
 		[[0,0,0,0,0,0],[0,0,0,0,0,0],[0,0,0,1,0,0],[0,0,1,1,0,0],[0,0,1,0,0,0],[0,0,0,0,0,0]],
 		[[0,0,0,0,0,0],[0,0,1,0,0,0],[0,0,1,0,0,0],[0,0,1,0,0,0],[0,0,1,0,0,0],[0,0,0,0,0,0]],
@@ -288,7 +285,7 @@ var gameover = function(){//ゲームオーバーの処理9:38 2011/03/12
 var makeNextblock = function(){//ブロックが固定されたら、フォーカスを上にする2:59 2011/03/08 
 
 	//n=(n+1)%11;//後にランダムに変更する
-	var  n = Math.floor(Math.random()*11);//変更しました3:11 2011/03/09
+	var  n = Math.floor(Math.random()*7);//変更しました3:11 2011/03/09
 
 	kesu();
 	makeBlock(block[n]);
